@@ -100,4 +100,4 @@ let implementation ppf sourcefile outputprefix =
     raise x
 
 let c_file name =
-  if Ccomp.compile_file name <> 0 then exit 2
+  if Ccomp.compile_file ~output_name:!Clflags.output_name name <> 0 then exit 2
