@@ -14,7 +14,7 @@
 
 val command: string -> int
 val run_command: string -> unit
-val compile_file: string -> int
+val compile_file: output_name:string option -> string -> int
 val create_archive: string -> string list -> int
 val expand_libname: string -> string
 val quote_files: string list -> string
